# railgunners

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_CONSTITUTION.md  CONTRIBUTING.md  Cargo.toml  README.md  VISION.md  deny.toml  flake.nix
.github/workflows/: ci.yml  publish-cli-image.yml  security.yml
crates/railgun-artifacts/: Cargo.toml
crates/railgun-artifacts/src/: backend.rs  download.rs  error.rs  layout.rs  lib.rs  load.rs  local.rs  variant.rs  verify.rs
crates/railgun-broadcaster/: Cargo.toml
crates/railgun-broadcaster/src/: encrypt.rs  error.rs  fee.rs  lib.rs  transact.rs  waku.rs
crates/railgun-cli/: Cargo.toml
crates/railgun-cli/src/: cli.rs  error.rs  main.rs  output.rs  parse.rs
crates/railgun-cli/src/commands/: address.rs  artifacts.rs  keys.rs  mnemonic.rs  mod.rs  viewing_key.rs
crates/railgun-cli/src/workflows/: address.rs  address_search.rs  keys.rs  mnemonic.rs  mod.rs  viewing_key.rs
crates/railgun-core/: Cargo.toml
crates/railgun-core/src/: address.rs  bip39.rs  blinding.rs  bound_params_v2.rs  bound_params_v3.rs  ciphertext_v2.rs  ciphertext_v3.rs  commitment_ciphertext.rs  event.rs  field.rs  hd.rs  keys.rs  lib.rs  merkle.rs  network_id.rs  note.rs  position.rs  railgun_txid.rs  receipt.rs  shareable_viewing_key.rs  shared_key.rs  shield_ciphertext.rs  token.rs  transaction_commitment.rs
crates/railgun-core/src/crypto/: babyjubjub.rs  mod.rs  poseidon.rs
crates/railgun-core/src/crypto/poseidon/: constants.rs  poseidon_constants_opt.json
crates/railgun-core/testdata/poseidon/: circomlibjs.json  engine-txid.json
crates/railgun-poi/: Cargo.toml
crates/railgun-poi/src/: client.rs  error.rs  lib.rs  model.rs  rpc.rs  validation.rs
crates/railgun-prover/: Cargo.toml
crates/railgun-prover/src/: backend.rs  error.rs  executor.rs  lib.rs  model.rs  select.rs
crates/railgun-types/: Cargo.toml
crates/railgun-types/src/: bound_params_v2.rs  ciphertext_v2.rs  commitment_ciphertext.rs  keys.rs  lib.rs  merkle.rs  note.rs  railgun_txid.rs  receipt.rs  shield_ciphertext.rs  token.rs
crates/railgun-wasm/: Cargo.toml
crates/railgun-wasm/src/: lib.rs
crates/railgunners-artifacts/: Cargo.toml
crates/railgunners-artifacts/src/: hash.rs  source.rs  verify.rs
crates/railgunners-broadcaster/: Cargo.toml
crates/railgunners-broadcaster/src/: encrypt.rs  error.rs  fee.rs  lib.rs  transact.rs  waku.rs
crates/railgunners-broadcaster/src/transact/: common.rs  mod.rs
crates/railgunners-cli/: Cargo.toml
crates/railgunners-cli/src/: cli.rs  main.rs  parse.rs
crates/railgunners-cli/src/commands/: address.rs  artifacts.rs  keys.rs  mnemonic.rs  viewing_key.rs
crates/railgunners-cli/src/workflows/: address.rs  address_search.rs  keys.rs  mnemonic.rs  mod.rs  viewing_key.rs
crates/railgunners-core/: Cargo.toml
crates/railgunners-core/src/: address.rs  blinding.rs  bound_params_v2.rs  bound_params_v3.rs  ciphertext_v2.rs  ciphertext_v3.rs  commitment_ciphertext.rs  event.rs  field.rs  hd.rs  keys.rs  lib.rs  merkle.rs  network_id.rs  note.rs  position.rs  railgun_txid.rs  receipt.rs  shareable_viewing_key.rs  shared_key.rs  shield_ciphertext.rs  token.rs  transaction_commitment.rs
crates/railgunners-core/src/crypto/: babyjubjub.rs  poseidon.rs
crates/railgunners-core/testdata/poseidon/: engine-txid-merkle-proof.json
crates/railgunners-poi/: Cargo.toml
crates/railgunners-poi/src/: client.rs  error.rs  http.rs  model.rs  rpc.rs  validation.rs
crates/railgunners-prover/: Cargo.toml
crates/railgunners-prover/src/: backend.rs  error.rs  executor.rs  lib.rs  model.rs  request.rs  select.rs
crates/railgunners-types/: Cargo.toml
crates/railgunners-types/src/: address.rs  bound_params_v3.rs  ciphertext_v3.rs  error.rs  event.rs  field.rs  keys.rs  note.rs  position.rs  proof.rs  railgun_txid.rs  transaction.rs
crates/railgunners-wasm/: Cargo.toml
crates/railgunners-wasm/src/: lib.rs
docs/: poseidon.md
scripts/: search-lower-0zk-address.sh
scripts/poseidon/: README.md  generate-vectors.mjs  package-lock.json  package.json
