[workspace]
members = [
    "crates/railgun-artifacts",
    "crates/railgun-types",
    "crates/railgun-core",
    "crates/railgun-wasm",
    "crates/railgun-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["RAILGUN contributors"]
repository = "https://github.com/railgun-community/railgun-rs"
rust-version = "1.85"

[workspace.dependencies]
railgun-artifacts = { path = "crates/railgun-artifacts" }
railgun-types = { path = "crates/railgun-types" }
railgun-core = { path = "crates/railgun-core" }
bech32 = "0.11.1"
num-bigint = "0.4.6"
serde = { version = "1.0.228", features = ["derive"] }

[workspace.lints.rust]
missing_docs = "warn"
non_camel_case_types = "deny"
non_snake_case = "deny"
non_upper_case_globals = "deny"
unused_imports = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
expect_used = "deny"
missing_errors_doc = "deny"
module_name_repetitions = "allow"
unwrap_used = "deny"
