[workspace]
members = [
    "crates/railgunners-artifacts",
    "crates/railgunners-broadcaster",
    "crates/railgunners-poi",
    "crates/railgunners-prover",
    "crates/railgunners-types",
    "crates/railgunners-core",
    "crates/railgunners-wasm",
    "crates/railgunners-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["RAILGUN contributors"]
repository = "https://github.com/suicide/railgunners"
rust-version = "1.85"

[workspace.dependencies]
railgunners-artifacts = { path = "crates/railgunners-artifacts" }
railgunners-broadcaster = { path = "crates/railgunners-broadcaster" }
railgunners-poi = { path = "crates/railgunners-poi" }
railgunners-prover = { path = "crates/railgunners-prover" }
railgunners-types = { path = "crates/railgunners-types" }
railgunners-core = { path = "crates/railgunners-core" }
bech32 = "0.12.0"
num-bigint = "0.4.6"
serde = { version = "1.0.228", features = ["derive"] }

[workspace.lints.rust]
missing_docs = "warn"
non_camel_case_types = "deny"
non_snake_case = "deny"
non_upper_case_globals = "deny"
unused_imports = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
expect_used = "deny"
missing_errors_doc = "deny"
module_name_repetitions = "allow"
unwrap_used = "deny"
