[package]
name = "railgun-broadcaster"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ed25519-dalek = "3.0.0-pre.7"
hex = "0.4.3"
railgun-core.workspace = true
railgun-poi.workspace = true
railgun-types.workspace = true
serde.workspace = true
serde_json = "1.0.145"
