[package]
name = "railgun-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "railgun-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
hex = "0.4.3"
num-bigint = "0.4.6"
railgun-core.workspace = true
railgun-types.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
