[package]
name = "railgun-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "railguncli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
getrandom = "0.3.4"
hex = "0.4.3"
num-bigint.workspace = true
railgun-artifacts.workspace = true
railgun-core.workspace = true
railgun-types.workspace = true
serde.workspace = true
serde_json = "1.0.145"
