[package]
name = "railgun-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
babyjubjub-rs.workspace = true
bech32.workspace = true
bip39 = { version = "2.2.2", features = ["rand"] }
curve25519-dalek = "5.0.0-pre.6"
ed25519-dalek = "3.0.0-pre.6"
ff.workspace = true
hmac = "0.12.1"
light-poseidon = "0.4.0"
num-bigint.workspace = true
railgun-types.workspace = true
rmp-serde = "1.3.0"
serde.workspace = true
serde_bytes = "0.11.19"
sha2 = "0.10.9"
sha3 = "0.10.8"
