[package]
name = "railgun-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aes-gcm = "0.10.3"
alloy-primitives = "1.6.0"
alloy-sol-types = "1.5.7"
ark-bn254 = "0.6.0"
ark-ff = "0.6.0"
bech32.workspace = true
blake-hash = "0.4.1"
bip39 = { version = "2.2.2", features = ["rand"] }
chacha20poly1305 = "0.10.1"
curve25519-dalek = "5.0.0-pre.6"
ed25519-dalek = "3.0.0-pre.7"
hmac = "0.13.0"
num-bigint.workspace = true
num-traits = "0.2.19"
railgun-types.workspace = true
rmp-serde = "1.3.0"
serde.workspace = true
serde_json = "1.0.145"
serde_bytes = "0.11.19"
sha2 = "0.11.0"
sha3 = "0.10.8"
