[package]
name = "railgun-poi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hex = "0.4.3"
num-bigint.workspace = true
railgun-core.workspace = true
railgun-types.workspace = true
serde.workspace = true
serde_json = "1.0.145"
