[package]
name = "railgun-prover"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
num-bigint.workspace = true
railgun-artifacts.workspace = true
railgun-core.workspace = true
railgun-types.workspace = true
serde_json = "1.0.145"
