[package]
name = "railgun-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
babyjubjub-rs = "0.0.11"
bech32 = "0.11.1"
ff = { package = "ff_ce", version = "0.11" }
num-bigint = "0.4.6"
