[package]
name = "railgun-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
babyjubjub-rs.workspace = true
bech32.workspace = true
ff.workspace = true
num-bigint.workspace = true
