[package]
name = "railgunners-artifacts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
download = ["dep:brotli", "dep:tempfile", "dep:ureq"]

[dependencies]
brotli = { version = "8.0.2", optional = true }
serde.workspace = true
serde_json = "1.0.145"
sha2 = "0.11.0"
tempfile = { version = "3.23.0", optional = true }
ureq = { version = "3.3.0", optional = true }
