[package]
name = "railgunners-broadcaster"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aes-gcm = "0.10.3"
curve25519-dalek = "5.0.0-pre.6"
ed25519-dalek = "3.0.0-pre.7"
hex = "0.4.3"
num-bigint.workspace = true
railgunners-core.workspace = true
railgunners-poi.workspace = true
railgunners-types.workspace = true
serde.workspace = true
serde_json = "1.0.145"
sha2 = "0.10.9"
