[package]
name = "railgunners-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "railgunners"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
getrandom = "0.4.2"
hex = "0.4.3"
num-bigint.workspace = true
railgunners-artifacts.workspace = true
railgunners-core.workspace = true
railgunners-types.workspace = true
serde.workspace = true
serde_json = "1.0.145"
