[package]
name = "railgunners-poi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
http = ["dep:ureq"]

[dependencies]
hex = "0.4.3"
num-bigint.workspace = true
railgunners-core.workspace = true
railgunners-types.workspace = true
serde.workspace = true
serde_json = "1.0.145"
ureq = { version = "3.3.0", optional = true }
