[package]
name = "railgunners-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bech32.workspace = true
num-bigint.workspace = true
sha3 = "0.10.8"
